# Habit_Tracking_App

./: .gitignore  README.md  habits.db  habits.json  pyproject.toml  requirements.txt  run_tests.py
backups/: habits_auto_backup_20251008_093251.json  habits_auto_backup_20251008_093255.json  habits_auto_backup_20251008_093256.json  habits_auto_backup_20251009_093208.json  habits_auto_backup_20251009_102121.json  habits_auto_backup_20251009_102320.json  habits_auto_backup_20251009_102845.json  habits_auto_backup_20251009_124809.json  habits_auto_backup_20251009_124827.json  habits_auto_backup_20251009_125421.json  habits_auto_backup_20251009_125837.json  habits_auto_backup_20251009_135418.json  habits_auto_backup_20251009_141005.json  habits_auto_backup_20251009_141117.json  habits_auto_backup_20251009_141127.json  habits_auto_backup_20251009_141137.json  habits_auto_backup_20251009_170329.json  habits_auto_backup_20251009_170447.json  habits_auto_backup_20251010_120414.json  habits_auto_backup_20251010_124904.json  habits_auto_backup_20251010_130757.json  habits_auto_backup_20251010_130922.json  habits_auto_backup_20251010_130951.json  habits_auto_backup_20251010_140153.json  habits_auto_backup_20251010_140221.json  habits_auto_backup_20251010_140238.json  habits_auto_backup_20251010_140641.json  habits_auto_backup_20251010_140648.json  habits_auto_backup_20251010_140736.json  habits_auto_backup_20251010_140746.json  habits_auto_backup_20251010_181117.json  habits_auto_backup_20251010_181135.json  habits_auto_backup_20251010_181206.json  habits_auto_backup_20251010_181224.json  habits_auto_backup_20251011_183455.json  habits_auto_backup_20251011_184649.json  habits_auto_backup_20251011_184908.json  habits_auto_backup_20251011_184923.json  habits_auto_backup_20251011_184936.json  habits_auto_backup_20251011_184944.json  (+29 more)
habit_tracker/: cli.py  functional_analytics.py  habit.py  habitmanager.py  habits.json  main.py  storage_handler.py
habit_tracker/backups/: habits_auto_backup_20251008_075251.json  habits_auto_backup_20251008_075510.json
habit_tracker/tests/: test_cli.py  test_habit.py  test_habitmanager.py  test_storage.py
tests/: conftest.py  test_cli.py  test_functional_analytics.py  test_habit.py  test_habitmanager.py  test_storage.py
