# ==============================================================================
# 1. BUILD SYSTEM CONFIGURATION
# This section tells pip and other tools how to build the project.
# We are using 'setuptools', which is the standard Python package builder.
# ==============================================================================
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

# ==============================================================================
# 2. PROJECT METADATA
# This section defines the actual package being installed.
# ==============================================================================
[project]
name = "habit-tracking-app"
version = "0.1.0"
authors = [
    { name="Profay", email="oyewaletimmy01@gmail.com" }, # 
]
description = "A simple command-line habit tracking application."
readme = "README.md"
requires-python = ">=3.12" # Ensure this matches your virtual environment's Python version (3.12.3)

# Add any external packages your app needs to run here!
dependencies = [
    # Core Dependencies
    python-dateutil>=2.8.0,<3.0.0          # Date utilities for habit tracking

    # Database Dependencies (optional - for SQLite support)
    # sqlite3 is included with Python by default, but listed for clarity
    # sqlite3>=3.0.0

    # Development and Testing Dependencies
    pytest>=7.0.0,<8.0.0                    # Testing framework
    pytest-mock>=3.6.0,<4.0.0               # Mocking support for pytest
    pytest-cov>=3.0.0,<4.0.0                # Coverage reporting
    pytest-xdist>=2.5.0,<3.0.0               # Parallel test execution

    # Code Quality and Formatting
    black>=22.0.0,<24.0.0                    # Code formatter
    flake8>=4.0.0,<7.0.0                     # Linting and style checking
    isort>=5.10.0,<6.0.0                     # Import sorting
    mypy>=1.0.0,<2.0.0                      # Static type checking
]