# ==============================================================================
# 1. BUILD SYSTEM CONFIGURATION
# This section tells pip and other tools how to build the project.
# We are using 'setuptools', which is the standard Python package builder.
# ==============================================================================
[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

# ==============================================================================
# 2. PROJECT METADATA
# This section defines the actual package being installed.
# ==============================================================================
[project]
name = "habit-tracking-app"
version = "0.1.0"
authors = [
    { name="Profay", email="oyewaletimmy01@gmail.com" }, # 
]
description = "A simple command-line habit tracking application."
readme = "README.md"
requires-python = ">=3.12" # Ensure this matches your virtual environment's Python version (3.12.3)

# Add any external packages your app needs to run here!
dependencies = [
    
]